- elastic logging - get users list api
